--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=Coping_with_services
-server.port=9090
+server.port=9092
 
 # Spring data Config
-spring.datasource.url=jdbc:mysql://localhost:3306/coping_With_crisis_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mindnotes_db?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysql-db:3306/mindnotes_db?createDatabaseIfNotExist=true
+
 spring.datasource.username=kanan
 spring.datasource.password=k30g08Y@02
 
@@ -16,3 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jackson.serialization.INDENT_OUTPUT=true
 logging.level.org.springframework.web=DEBUG
+
+jwt.secret= PhIsyxtORPYufZWKuyJ9kp4k/2SYhrCAWIEGd+QM2nE=
+jwt.expiration=86400000
+
